Add PACK* branch-DP backend